tests/baselines/reference/classCannotExtendVar.errors.txt
==== tests/cases/compiler/classCannotExtendVar.ts (1 errors) ====
    var Markup;
    
    class Markup {
          ~~~~~~
!!! classCannotExtendVar.ts(3,7): error TS2000: Duplicate identifier 'Markup'.
        constructor() {
        }
    }
    